--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,28 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # random seed\n",
-    "# SEED = 1 \n",
-    "# NUM_CLASS = 10\n",
+    "SEED = 1 \n",
+    "NUM_CLASS = 10\n",
     "\n",
     "# Training\n",
     "BATCH_SIZE = 128\n",
-    "# NUM_EPOCHS = 30\n",
-    "# EVAL_INTERVAL=1\n",
-    "# SAVE_DIR = './log'\n",
+    "NUM_EPOCHS = 30\n",
+    "EVAL_INTERVAL=1\n",
+    "SAVE_DIR = './log'\n",
     "\n",
     "# # Optimizer\n",
-    "# LEARNING_RATE = 1e-1\n",
-    "# MOMENTUM = 0.9\n",
-    "# STEP=5\n",
-    "# GAMMA=0.5\n",
+    "LEARNING_RATE = 1e-1\n",
+    "MOMENTUM = 0.9\n",
+    "STEP=5\n",
+    "GAMMA=0.5\n",
     "\n",
     "# CLIP\n",
-    "VISUAL_BACKBONE = 'RN50' # RN50, ViT-B/32, ViT-B/16\n"
+    "VISUAL_BACKBONE = 'RN50' # RN50, ViT-B/32, ViT-B/16"
    ]
   },
   {
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+    "device = device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
    ]
   },
   {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -539,7 +541,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,27 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'a photo of a' # you can try different prompt\n",
-    "\n",
     "def prompt_encode(prompt):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        prompt (str): the text prefix before the class\n",
-    "\n",
-    "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
-    "    ###############################################################\n",
-    "    \n",
-    "    return text_inputs\n"
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
+    "    return text_inputs"
    ]
   },
   {
@@ -602,19 +591,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def model_inference(model, image, text_inputs):\n",
-    "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
     "    ###############################################################\n",
-    "\n",
     "    return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = optim.SGD(model.parameters(), lr=LEARNING_RATE, momentum=MOMENTUM)"
    ]
   },
   {
@@ -627,37 +627,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "Testing Loss: 1.2270, Testing Accuracy: 0.5584\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "testing_loss = []\n",
     "testing_acc = []\n",
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
+    "    all_preds = []\n",
+    "    all_targets = []\n",
     "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
     "\n",
+    "        # Test model and calculate cross-entropy loss\n",
+    "        logits = model_inference(model, image, prompt_encode(prompt))\n",
+    "        loss = F.cross_entropy(logits, target)\n",
+    "        testing_loss.append(loss.item())  # Append the loss to the testing_loss list\n",
     "\n",
-    "     ###############################################################\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
     "\n",
+    "        # Collect predictions and targets for later evaluation\n",
+    "        all_preds.extend(preds.cpu().numpy())\n",
+    "        all_targets.extend(target.cpu().numpy())\n",
     "\n",
+    "    # Calculate accuracy\n",
+    "    val_acc = val_corrects.double() / len(test_dataloader.dataset)\n",
     "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "# Print testing loss and accuracy\n",
+    "print(f'Testing Loss: {np.mean(testing_loss):.4f}, Testing Accuracy: {val_acc:.4f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
