--- a/exercise_3.ipynb
+++ b/exercise_3.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+    "#device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cpu\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +549,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +588,8 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    # 使用CLIP模型编码提示\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt}{c}\") for c in class_names]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,8 +620,15 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
     "    \n",
-    "\n",
+    "    image_features /= image_features.norm(dim = -1, keepdim = True)\n",
+    "    text_features /= text_features.norm(dim = -1, keepdim = True)\n",
+    "    \n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "    \n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 49.84%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,17 +664,31 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "\n",
-    "\n",
-    "\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
+    "    \n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "        text_inputs = prompt_encode(prompt)\n",
+    "        #test model\n",
+    "        logits = model_inference(model, image, text_inputs)\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        \n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
     "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
